mp12/nightly.txt
Compilation Results:
********************
In file included from main.cpp:3:0:
shape.hpp: In member function ‘std::string Shape::getName()’:
shape.hpp:27:2: error: no return statement in function returning non-void [-Werror=return-type]
  }
  ^
cc1plus: all warnings being treated as errors
shape.hpp: In member function ‘std::string Shape::getName()’:
shape.hpp:27:2: error: no return statement in function returning non-void [-Werror=return-type]
  }
  ^
cc1plus: all warnings being treated as errors
make: *** [student] Error 1
 

 ------------------- Begin Verifying MP12 ---------------------

Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2022-04-23_03:12:37
